# pydantic-boilerplate

./: .gitignore  main.py  main2.py  pyproject.toml
.cursor/rules/: ai-configuration.mdc  models.mdc  project-overview.mdc
transcripts/: w0.5.txt  w0.txt  w1.txt  w2.txt  w3.txt  w4.txt  w5.txt  w6.txt  w7.txt  w8.txt  w9.txt
